add swaggo data for del func
