# routes/cows/deleteData.go
@@ -10,6 +10,20 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+
+// Delete rows
+// @Summary      Deleting rows by filters
+// @Description  Удаляет коров по выстановленным фильтрам
+// @Description  Возращает словарь с ключом "N". По ключу "N" - общее кол-во удаленных коров.
+// @Tags         Cows
+// @Param        filter    body     cows_filter.CowsFilter  true  "removal by filters"
+// @Accept       json
+// @Produce      json
+// @Success      200  {array}   string
+// @Failure      422  {object}  string
+// @Failure      500  {object}  string
+// @Failure		 401  {object}	string
+// @Router       /cows/delByFilters [post]
 func (c *Cows) toDeleteRows() func(*gin.Context) {
 	return func(c *gin.Context) {
 		roleId, exists := c.Get("RoleId") // номер роли при анутификации
@@ -19,7 +33,7 @@ func (c *Cows) toDeleteRows() func(*gin.Context) {
 		}
 		
 		if roleId != 4 { 
-			c.JSON(401, "")
+			c.JSON(401, "The user is not authorized")
 			return
 		}
 		
